<resources>
    <string name="app_name">My Application</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="close">Close</string>
    <string name="water_app">Water App</string>
    <string name="logout">logout</string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="title_activity_register">Sign up</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="water_report">Water Purity Reports</string>
    <string name="create_button">Create New Report</string>
    <string name="title_activity_show_report">ShowReportActivity</string>
    <string name="report_date">Date of Report</string>
    <string name="textView">TextView</string>
    <string name="title_activity_create_report">createReport</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_create_source_report">CreateSourceReport</string>
    <string name="title_activity_view_source_report_activity">ViewSourceReportActivity</string>
    <string name="title_activity_view_purity_reports_location">Map</string>
     <string name="title_activity_pick_source_report_location">Map</string>
    <string name="title_activity_view_source_reports_location">Map</string>
    <string name="water_source_reports">Water Source Reports</string>
    <string name="source_report_activity">Source Report Activity</string>
    <string name="sourceReportActivity">SourceReportActivity</string>
    <string name="title_activity_graph_information">GraphInformationActivity</string>
    <string name="title_activity_retrieve_graph_data">RetrieveGraphData</string>
    <string name="location">Location</string>
    <string name="cancel">Cancel</string>
    <string name="end_date">End Date</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="your_profile">Your Profile</string>
    <string name="edit">EDIT</string>
    <string name="name">Name:</string>
    <string name="email_address">Email Address:</string>
    <string name="home_address">Home Address:</string>
    <string name="user_id">User id:</string>
    <string name="user">user</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="address">address</string>
    <string name="user_type">User Type</string>
    <string name="register">Register</string>
    <string name="create">Create</string>
    <string name="water_quality">Water Quality</string>
    <string name="contaminate_ppm">Contaminate PPM</string>
    <string name="virus_ppm">Virus PPM</string>
    <string name="existed_location">Existed Location</string>
    <string name="water_condition">Water Condition</string>
    <string name="water_type">Water Type</string>
    <string name="submit_main">Submit a report on water availability</string>
    <string name="view_source_main">View available water source</string>
    <string name="report_purity_main">Report on water purity levels</string>
    <string name="view_purity_main">View Purity Report</string>
    <string name="trend_purity_main">Trends of water purity</string>
    <string name="security_main">Security log</string>
    <string name="my_profile_main">My Profile</string>
    <string name="sign_out_main">Sign Out</string>
    <string name="view_map">view map</string>
</resources>
