<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.olivia.myapplication.controller.RegisterActivity">

    <EditText
        android:id="@+id/etId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etId"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:layout_below="@+id/etUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etEmail"
        android:hint="@string/email"
        android:layout_below="@+id/etPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/etAddress"
        android:hint="@string/address"
        android:layout_below="@+id/etEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userTypeSpinner"
        android:spinnerMode="dialog"
        android:layout_below="@+id/etAddress"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/user_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/userTypeSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/etUserType" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/userTypeSpinner"
        android:layout_marginTop="51dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/createButton_source"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etUserType"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@+id/etUserType"
            android:layout_toRightOf="@+id/etUserType"
            android:layout_weight="0.38"
            android:onClick="showAlert"
            android:text="@string/register"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/linearLayout2"
            android:layout_alignRight="@+id/linearLayout2"
            android:layout_alignTop="@+id/linearLayout2"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/cancel" />

    </LinearLayout>

</RelativeLayout>
