<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.olivia.myapplication.controller.CreateSourceReportActivity"
    tools:showIn="@layout/activity_create_source_report">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etConditionSpinner_source"
        android:spinnerMode="dialog"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/etTypeSpinner_source"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/etTypeSpinner_source"
        android:layout_alignStart="@+id/etTypeSpinner_source" />

    <TextView
        android:id="@+id/etConditionType_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/water_condition"
        android:layout_alignTop="@+id/etConditionSpinner_source"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/etTypeSpinner_source"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/addressTV_source"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/etTypeSpinner_source_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/water_type"
        android:layout_alignTop="@+id/etTypeSpinner_source"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/location_button_source"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/cancelButton_source"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/createButton_source"
            style="@android:style/Widget.Button"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.29"
            android:text="@string/create"
            android:textAllCaps="false" />
    </LinearLayout>

    <Button
        android:id="@+id/location_button_source"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/location"
        android:layout_below="@+id/etConditionSpinner_source"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/addressTV_source"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/address"
        android:textSize="19sp" />

</RelativeLayout>
