<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#666666"
    tools:context="com.example.olivia.myapplication.controller.RegisterActivity">

    <Spinner
        android:layout_width="250dp"
        android:layout_height="28dp"
        android:id="@+id/userTypeSpinner"
        android:spinnerMode="dialog"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
        tools:layout_editor_absoluteX="102dp" />

    <TextView
        android:text="@string/user_type"
        android:layout_width="65dp"
        android:layout_height="28dp"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7" />


    <Button
        android:id="@+id/cancelButton"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="164dp"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorAccentPink"
        android:text="@string/cancel"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/createButton_source"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="164dp"
        android:layout_height="52dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorAccentPink"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="128dp"
        tools:layout_conversion_absoluteX="182dp"
        tools:layout_conversion_absoluteY="322dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/userTypeSpinner"
        app:layout_constraintVertical_bias="0.891" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout9"
        android:layout_width="342dp"
        android:layout_height="57dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

        <EditText
            android:id="@+id/etEmail"
            android:textColor="@color/colorAccent"
            android:layout_width="218dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:background="#444444"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintLeft_toLeftOf="@+id/etAddress"
            app:layout_constraintRight_toRightOf="@+id/etAddress"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout8"
        android:layout_width="342dp"
        android:layout_height="57dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textColorHint="@color/colorAccent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout10">

        <EditText
            android:id="@+id/etId"
            android:layout_width="218dp"
            android:textColor="@color/colorAccent"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:background="#444444"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="@+id/etUsername"
            app:layout_constraintRight_toRightOf="@+id/etUsername"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="342dp"
        android:layout_height="57dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="218dp"
            android:textColor="@color/colorAccent"
            android:layout_height="match_parent"
            android:background="#444444"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="@+id/etEmail"
            app:layout_constraintRight_toRightOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/etUsername"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout7"
        android:layout_width="342dp"
        android:layout_height="57dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout9">

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="218dp"
            android:layout_height="match_parent"
            android:background="#444444"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:textColor="@color/colorAccent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="442dp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="145dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout10"
        android:layout_width="342dp"
        android:layout_height="57dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="218dp"
            android:layout_height="match_parent"
            android:background="#444444"
            android:hint="@string/your_name"
            android:textColor="@color/colorAccent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

        <requestFocus />
    </android.support.design.widget.TextInputLayout>


</android.support.constraint.ConstraintLayout>
